<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_category_general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="long_press_back_to_game"
            android:title="@string/settings_title_long_press_back_to_game"
            android:summary="@string/settings_summary_long_press_back_to_game"/>
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/settings_array_game"
            android:entryValues="@array/settings_array_game_value"
            android:key="game_version"
            android:title="@string/settings_title_game_version"
            android:summary="@string/settings_summary_game_version"/>

    </PreferenceCategory>
</PreferenceScreen>