<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hr_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:descendantFocusability="blocksDescendants">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">
        <TextView
            android:id="@+id/hr_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr_desc_exact"
            android:focusable="true"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>



    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/hr_selector_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:tag="star">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_selector_star" />

            <CheckBox
                android:id="@+id/hr_checkbox_star_1"
                style="@style/AppTheme.CheckBox.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_star_1"
                android:tag="1"/>

            <CheckBox
                android:id="@+id/hr_checkbox_star_2"
                style="@style/AppTheme.CheckBox.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_star_2"
                android:tag="2"/>

            <CheckBox
                android:id="@+id/hr_checkbox_star_3"
                style="@style/AppTheme.CheckBox.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_star_3"
                android:tag="3"/>

            <CheckBox
                android:id="@+id/hr_checkbox_star_4"
                style="@style/AppTheme.CheckBox.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_star_4"
                android:tag="4"/>

            <CheckBox
                android:id="@+id/hr_checkbox_star_5"
                style="@style/AppTheme.CheckBox.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_star_5"
                android:tag="5"/>

            <CheckBox
                android:id="@+id/hr_checkbox_star_6"
                style="@style/AppTheme.CheckBox.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_star_6"
                android:tag="6"/>
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/hr_selector_qualification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:tag="qualification">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_selector_qualification" />

            <CheckBox
                android:id="@+id/hr_checkbox_qualification_1"
                style="@style/AppTheme.CheckBox.Yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_qualification_1"
                android:tag="新手"/>

            <CheckBox
                android:id="@+id/hr_checkbox_qualification_2"
                style="@style/AppTheme.CheckBox.Yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_qualification_2"
                android:tag="资深干员"/>

            <CheckBox
                android:id="@+id/hr_checkbox_qualification_3"
                style="@style/AppTheme.CheckBox.Yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_qualification_3"
                android:tag="高级资深干员"/>
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/hr_selector_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:tag="position">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_selector_position" />

            <CheckBox
                android:id="@+id/hr_checkbox_position_near"
                style="@style/AppTheme.CheckBox.Green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_position_near"
                android:tag="近战位"/>

            <CheckBox
                android:id="@+id/hr_checkbox_position_distant"
                style="@style/AppTheme.CheckBox.Green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_position_distant"
                android:tag="远程位"/>
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/hr_selector_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:tag="sex">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_selector_sex" />

            <CheckBox
                android:id="@+id/hr_checkbox_sex_male"
                style="@style/AppTheme.CheckBox.Red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_sex_male"
                android:tag="男"/>

            <CheckBox
                android:id="@+id/hr_checkbox_sex_female"
                style="@style/AppTheme.CheckBox.Red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_sex_female"
                android:tag="女"/>
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/hr_selector_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            android:tag="type">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_selector_type" />

            <CheckBox
                android:id="@+id/hr_checkbox_type_vanguard"
                style="@style/AppTheme.CheckBox.Cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_type_vanguard"
                android:tag="先锋"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_sniper"
                style="@style/AppTheme.CheckBox.Cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_type_sniper"
                android:tag="狙击"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_medic"
                style="@style/AppTheme.CheckBox.Cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_type_medic"
                android:tag="医疗"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_caster"
                style="@style/AppTheme.CheckBox.Cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_type_caster"
                android:tag="术师"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_guard"
                style="@style/AppTheme.CheckBox.Cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_type_guard"
                android:tag="近卫"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_defender"
                style="@style/AppTheme.CheckBox.Cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_type_defender"
                android:tag="重装"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_supporter"
                style="@style/AppTheme.CheckBox.Cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_type_supporter"
                android:tag="辅助"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_specialist"
                style="@style/AppTheme.CheckBox.Cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_type_specialist"
                android:tag="特种"/>

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/hr_selector_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            android:tag="tag">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_selector_tag" />

            <CheckBox
                android:id="@+id/hr_checkbox_type_zhiliao"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_zhiliao"
                android:tag="治疗"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_zhiyuan"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_zhiyuan"
                android:tag="支援"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_shuchu"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_shuchu"
                android:tag="输出"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_qungong"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_qungong"
                android:tag="群攻"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_jiansu"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_jiansu"
                android:tag="减速"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_shengcun"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_shengcun"
                android:tag="生存"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_fanghu"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_fanghu"
                android:tag="防护"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_xveruo"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_xveruo"
                android:tag="削弱"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_weiyi"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_weiyi"
                android:tag="位移"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_kongcchang"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_kongchang"
                android:tag="控场"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_baofa"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_baofa"
                android:tag="爆发"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_zhaohuan"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_zhaohuan"
                android:tag="召唤"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_kuaisufuhuo"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_kuaisufuhuo"
                android:tag="快速复活"/>

            <CheckBox
                android:id="@+id/hr_checkbox_type_feiyonghuifu"
                style="@style/AppTheme.CheckBox.Lime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hr_tag_feiyonghuifu"
                android:tag="费用回复"/>

        </LinearLayout>
    </HorizontalScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:id="@+id/hr_result_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/hr_result"/>
            <LinearLayout
                android:id="@+id/hr_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
