<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/game_selector_official"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/game_official" />

        <TextView
            android:id="@+id/game_selector_bilibili"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/game_bilibili" />

        <TextView
            android:id="@+id/game_selector_taiwanese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/game_taiwanese" />

        <TextView
            android:id="@+id/game_selector_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/game_english" />

        <TextView
            android:id="@+id/game_selector_japanese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/game_japanese" />

        <TextView
            android:id="@+id/game_selector_korean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/game_korean" />




    </LinearLayout>



</androidx.cardview.widget.CardView>